v8_static_library = true
is_debug = false
target_os = "android"
target_cpu = "arm"
v8_enable_backtrace = true
v8_target_cpu = "arm"
is_component_build = false
v8_monolithic = true
v8_use_external_startup_data = false
symbol_level = 0
v8_enable_i18n_support = false
use_custom_libcxx = false
#v8_enable_pointer_compression = false
use_thin_lto = false
v8_android_log_stdout = false
default_min_sdk_version=21
android_ndk_major_version=20
android_ndk_root = "/opt/sdk-root/ndk/25.0.8775105/"
v8_enable_snapshot_compression=false
v8_enable_javascript_promise_hooks=true
strip_debug_info = false
clang_use_chrome_plugins=false
is_official_build=true
treat_warnings_as_errors=false
v8_enable_webassembly=true
